--- a/circles.html
+++ b/circles.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tap clone </title>
+    <link rel="stylesheet" href=circles.css">
     <script type="text/javascript" src="paper-full.js"></script>
-    
+
+
+    <script type="text/paperscript" canvas="myCanvas">
+        // Create a Paper.js Path to draw a line into it:
+        var path = new Path();
+        // Give the stroke a color
+        path.strokeColor = 'black';
+        var start = new Point(100, 100);
+        // Move to start and draw a line from there
+        path.moveTo(start);
+        // Note the plus operator on Point objects.
+        // PaperScript does that for us, and much more!
+        path.lineTo(start + [ 100, -50 ]);
+    </script>
 </head>
 <body>
     <!-- nb=-+65 -->
+    <canvas id="myCanvas" resize></canvas>
 </body>
 </html>
